@@ -176,7 +176,9 @@ extern NSString *GormResizeCellNotification;
 + (GormClassEditor*) classEditorForDocument: (GormDocument*)doc;
 - (void) setSelectedClassName: (NSString*)cn;
 - (NSString *) selectedClassName;
+- (void) selectClassWithObject: (id)obj editClass: (BOOL)flag;
 - (void) selectClassWithObject: (id)obj;
+- (void) selectClass: (NSString *)className editClass: (BOOL)flag;
 - (void) selectClass: (NSString *)className;
 - (BOOL) currentSelectionIsClass;
 - (void) editClass;
